# agentic-coding-tools

./: .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  architecture.config.yaml  install-hooks.sh  two-level-parallel-agentic-development.md
agent-coordinator/: .dockerignore  .env.example  .secrets.yaml.example  CLAUDE.md  Dockerfile  Makefile  README.md  agents.yaml  archetypes.yaml  config.yaml.example  docker-compose.yml  get_dispatch_configs.py  pyproject.toml  railway.toml  requirements.txt  teams.yaml
agent-coordinator/cedar/: default_policies.cedar  schema.cedarschema
agent-coordinator/cloudflared/: .gitignore  config.yaml
agent-coordinator/evaluation/: README.md  __init__.py  ablation.py  config.py  conftest.py  consensus.py  harness.py  metrics.py
agent-coordinator/formal/: README.md  coordination.cfg  coordination.tla
agent-coordinator/profiles/: base.yaml  cloudflare.yaml  local.yaml  openbao.yaml  railway.yaml
agent-coordinator/scripts/: check_coordinator.py  check_docker_imports.py  deregister_agent.py  e2e_kanban.py  gemini_wrapper.sh  install_hooks.py  langfuse_hook.py  register_agent.py  report_status.py  seed_kanban_board.py  setup_cloud.py  setup_langfuse.sh  wait_for_db.py
agent-coordinator/src/: __init__.py  agents_config.py  assurance.py  audit.py  audit_triage.py  axi_output.py  config.py  coordination_api.py  coordination_cli.py  coordination_mcp.py  db.py  db_postgres.py  discovery.py  docker_manager.py  event_bus.py  event_stream.py  feature_flags.py  feature_registry.py  git_adapter.py  github_classifier.py  github_coordination.py  github_openspec_fetcher.py  github_prs_api.py  guardrails.py  handoffs.py  http_proxy.py  issue_service.py  kanban_viz_files.py  langfuse_middleware.py  langfuse_tracing.py  locks.py  memory.py  merge_queue.py  merge_train.py  merge_train_types.py  merge_watcher.py  migrations.py  network_policies.py  openspec_proposals_api.py  openspec_sources.py  (+11 more)
agent-coordinator/supabase/: seed.sql
agent-coordinator/tests/: __init__.py  conftest.py  test_agents_config.py  test_archetypes_config.py  test_assurance_inventory.py  test_audit.py  test_audit_capability_gaps.py  test_audit_completeness.py  test_axi_output.py  test_boundary_enforcement.py  test_cancel_convention.py  test_cedar_policy_engine.py  test_cedar_policy_seed_alignment.py  test_check_docker_imports.py  test_coordination_api.py  test_coordination_api_new_endpoints.py  test_coordination_cli_axi.py  test_db_factory.py  test_differential_policy.py  test_discovery.py  test_docker_manager.py  test_evaluator_profile.py  test_event_bus.py  test_feasibility_assessment.py  test_feature_registry.py  test_gen_eval_extraction.py  test_git_adapter.py  test_github_classifier.py  test_github_coordination.py  test_github_openspec_fetcher.py  test_github_prs_api.py  test_github_rest_adapter.py  test_gmail_channel.py  test_gmail_relay.py  test_guardrails.py  test_handoffs.py  test_http_get_task.py  test_http_proxy.py  test_install_hooks.py  test_issue_service.py  (+44 more)
agent-coordinator/verification_gateway/: .env.example  ARCHITECTURE.md  CLAUDE.md  MCP_INTEGRATION.md  OPENSPEC.md  README.md  coordination_api.py  coordination_mcp.py  gateway.py  requirements.txt  supabase_memory_schema.sql  supabase_schema.sql
scripts/: ai_dora_snapshot.py  analyze_postgres.py  analyze_python.py  analyze_typescript.ts  architecture_schema.json  bao_seed.py  compile_architecture_graph.py  coordination_bridge.py  diff_architecture.py  enrich_with_treesitter.py  generate_views.py  impl_review_driver.py  impl_review_handoff.py  migrate_beads_to_coordinator.py  parallel_zones.py  pyproject.toml  refresh_architecture.sh  setup-cli.sh  test_opsx_e2e.sh  validate_flows.py  validate_schema.py  validate_work_packages.py  validate_work_result.py  worktree-bootstrap.sh  worktree.py
scripts/arch_utils/: constants.py  diagnostics.py  graph_io.py  traversal.py
scripts/insights/: cross_layer_linker.py  db_linker.py  flow_tracer.py  flow_validator.py  graph_builder.py  impact_ranker.py  parallel_zones.py  summary_builder.py
scripts/reports/: architecture_report.py  config_schema.py
scripts/tests/: __init__.py  test_ai_dora_snapshot.py  test_bao_seed.py  test_coordination_bridge.py  test_pipeline_integration.py  test_worktree.py
skills/: cleanup-feature  cleanup-feature.md  explore-feature  fetch-vendor-skills.sh  implement-feature  install.sh  iterate-on-implementation  iterate-on-plan  openspec-apply  openspec-archive  openspec-proposal  plan-feature  pyproject.toml  validate-feature  vendor-manifest.json
skills/agent-metrics/: SKILL.md
skills/api-and-interface-design/: SKILL.md
skills/archive-roadmap/: SKILL.md
skills/auto-dev-loop/: SKILL.md
skills/autopilot/: SKILL.md
skills/autopilot-roadmap/: SKILL.md
skills/bug-scrub/: SKILL.md
skills/changelog-version/: SKILL.md
skills/cleanup-feature/: SKILL.md
skills/collect-transcripts/: SKILL.md  config.yaml.example
skills/context-engineering/: SKILL.md
skills/coordinator-task-status-renderer/: SKILL.md
skills/debugging-and-error-recovery/: SKILL.md
skills/deprecation-and-migration/: SKILL.md
skills/expedite/: SKILL.md
skills/explore-feature/: SKILL.md
skills/frontend-ui-engineering/: SKILL.md
skills/gen-eval/: SKILL.md
skills/implement-feature/: SKILL.md
skills/improve-and-iterate/: SKILL.md
skills/improve-harness/: SKILL.md
skills/iterate-on-implementation/: SKILL.md
skills/iterate-on-plan/: SKILL.md
skills/langfuse/: SKILL.md
skills/linear-iterate-on-implementation/: SKILL.md
skills/merge-pull-requests/: SKILL.md
skills/openspec-beads-worktree/: CONTRIBUTING.md  README.md  install.sh
skills/parallel-cleanup-feature/: SKILL.md
skills/parallel-implement/: SKILL.md
skills/parallel-implement-feature/: SKILL.md
skills/parallel-plan-feature/: SKILL.md
skills/parallel-review-implementation/: SKILL.md
skills/parallel-review-plan/: SKILL.md
skills/performance-optimization/: SKILL.md
skills/plan-feature/: SKILL.md
(+1760 files in other folders)
