[project]
name = "agent-coordinator"
version = "0.1.0"
description = "Multi-agent coordination system for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "respx>=0.21.0",
    "PyJWT>=2.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
coordination-mcp = "src.coordination_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring local Supabase (docker-compose up -d)",
    "e2e: end-to-end tests against running services (docker-compose up -d)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
