[project]
name = "agent-coordinator"
version = "0.1.0"
description = "Multi-agent coordination system for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3,<4.0",
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "jsonschema>=4.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "aiosmtplib>=2.0.0",
    "aioimaplib>=1.0.0",
    "email-validator>=2.3.0",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.136.1",
    "uvicorn>=0.32.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
cedar = [
    "cedarpy>=4.0.0",
]
sdk = [
    "anthropic>=0.94.0",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
gen-eval = [
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.6.0",
]
analysis = [
    "psycopg2-binary>=2.9.0",
]
observability = [
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "prometheus-client>=0.20.0",
    "langfuse>=4.5.1,<5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.23.1",
    "PyJWT>=2.8.0",
    "ruff>=0.15.10",
    "mypy>=1.13.0",
    "hypothesis>=6.152.7",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.23.1",
    "PyJWT>=2.8.0",
    "ruff>=0.15.10",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "asyncpg>=0.30.0",
    "cedarpy>=4.0.0",
]

[project.scripts]
coordination-mcp = "src.coordination_mcp:main"
coordination-api = "src.coordination_api:main"
coordination-cli = "src.coordination_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    # CVE-2026-42561: python-multipart < 0.0.27 has a DoS vulnerability in
    # multipart header parsing (no per-part header count or size limit).
    # Brought in transitively via mcp -> fastmcp; force the resolver to pick
    # the patched version until upstream constraints catch up.
    "python-multipart>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring local Supabase (docker-compose up -d)",
    "e2e: end-to-end tests against running services (docker-compose up -d)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
