[project]
name = "agent-coordinator"
version = "0.1.0"
description = "Multi-agent coordination system for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3,<4.0",
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "jsonschema>=4.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "aiosmtplib>=2.0.0",
    "aioimaplib>=1.0.0",
    "email-validator>=2.3.0",
    "urllib3>=2.7.0",
    # gen-eval framework is now a sibling package (see [tool.uv.sources]).
    # We install with the [mcp] extra so coordinator's MCP service surface
    # keeps working (it serves /gen-eval/* tools via gen_eval.mcp_service).
    "gen-eval[mcp]",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.136.1",
    "uvicorn>=0.32.0",
    # IMPL_REVIEW claude_code#12: sse-starlette is imported at runtime in
    # coordination_api.py:2759 (EventSourceResponse) for the /events/work SSE
    # endpoint. PyJWT is imported in event_stream.py for mint/verify of the
    # short-lived SSE auth token. Both were transitively present in uv.lock
    # but absent from [api] — any environment installed via `pip install
    # .[api]` would fail at runtime.
    "sse-starlette>=2.1.0",
    "PyJWT>=2.8.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
cedar = [
    "cedarpy>=4.0.0",
]
sdk = [
    "anthropic>=0.94.0",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
analysis = [
    "psycopg2-binary>=2.9.0",
]
observability = [
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "prometheus-client>=0.20.0",
    "langfuse>=4.5.1,<5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.23.1",
    "PyJWT>=2.8.0",
    "ruff>=0.15.10",
    "mypy>=1.13.0",
    "hypothesis>=6.152.7",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.23.1",
    "PyJWT>=2.8.0",
    "ruff>=0.15.10",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "asyncpg>=0.30.0",
    "cedarpy>=4.0.0",
]

[project.scripts]
coordination-mcp = "src.coordination_mcp:main"
coordination-api = "src.coordination_api:main"
coordination-cli = "src.coordination_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    # CVE-2026-42561: python-multipart < 0.0.27 has a DoS vulnerability in
    # multipart header parsing (no per-part header count or size limit).
    # Brought in transitively via mcp -> fastmcp; force the resolver to pick
    # the patched version until upstream constraints catch up.
    "python-multipart>=0.0.27",
]

# Resolve `gen-eval` to the sibling package in this monorepo. Per design
# decision D5, the install is NON-editable: uv builds gen-eval into a wheel
# and copies the contents into the coordinator's venv. This keeps the
# multi-stage agent-coordinator/Dockerfile safe (the runtime image stage
# copies only /app/.venv from the builder stage, and gen_eval is fully
# self-contained inside .venv/lib/python3.X/site-packages/gen_eval/).
[tool.uv.sources]
gen-eval = { path = "../packages/gen-eval" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring local Supabase (docker-compose up -d)",
    "e2e: end-to-end tests against running services (docker-compose up -d)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
