[project]
name = "architecture-scripts"
version = "0.1.0"
description = "Architecture analysis scripts with tree-sitter enrichment"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-sql>=0.3,<1.0",
    "tree-sitter-python>=0.23,<1.0",
    "tree-sitter-typescript>=0.23,<1.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
