[project]
name = "skill-scripts"
version = "0.2.0"
description = "Shared Python dependencies for infrastructure skills"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2,<1.0",
    "tree-sitter-sql>=0.3,<1.0",
    "tree-sitter-python>=0.25.0,<1.0",
    "tree-sitter-typescript>=0.23.2,<1.0",
    "hvac>=2.4.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = [
    "anthropic>=0.40",
    "openai>=2.31.0",
    "google-generativeai>=0.8.6",
]
test = [
    "pytest>=9.0.3",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
# Make tests/_shared importable as `from skill_invariants import ...` from any
# per-skill test_skill_md.py file. See skills/tests/_shared/skill_invariants.py.
pythonpath = ["tests/_shared"]
testpaths = [
    "shared/tests",
    "worktree/scripts/tests",
    "coordination-bridge/scripts/tests",
    "validate-packages/scripts/tests",
    "validate-flows/scripts/tests",
    "refresh-architecture/scripts/tests",
    "bao-vault/scripts/tests",
    "changelog-version/tests",
    # Engineering-methodology skills (added by add-engineering-methodology-skills change).
    # Phase 0 scaffold:
    "tests/_shared",
    "tests/install_sh",
    # Phase 1 new methodology skills (added per-skill by Phase 1 work packages):
    "tests/test-driven-development",
    "tests/debugging-and-error-recovery",
    "tests/context-engineering",
    "tests/source-driven-development",
    "tests/performance-optimization",
    "tests/frontend-ui-engineering",
    "tests/api-and-interface-design",
    "tests/browser-testing-with-devtools",
    "tests/deprecation-and-migration",
    "tests/documentation-and-adrs",
    # Phase 2 ADAPT-target invariant tests (added per-skill by Phase 2 work packages):
    "tests/implement-feature",
    "tests/plan-feature",
    "tests/simplify",
    "tests/parallel-review-plan",
    "tests/parallel-review-implementation",
    "tests/security-review",
    "tests/bug-scrub",
    "tests/tech-debt-analysis",
    "tests/cleanup-feature",
    "tests/explore-feature",
    "tests/parallel-infrastructure",
]

[tool.ruff]
target-version = "py312"
line-length = 100
