[package]
name = "kanban-viz"
version = "0.1.0"
description = "Kanban Viz — coordinator observability frontend"
authors = []
license = ""
repository = ""
default-run = "kanban-viz"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
